--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: startup_namer
+name: NameGenerator
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
